@@ -2,5 +2,5 @@
 *~
 TODO.md
 FEATURES.md
-
+bower_components
 tmp
