@@ -1,5 +1,10 @@
 2014-03-03  jj  <jj@unski>
 
+	* 2-layout/bower.json: first version, with "bootstrap": "~3.1.1"
+
+	* 2-layout/devcc.html: first version of page layout based on
+	http://getbootstrap.com/examples/starter-template/#
+
 	* README.md: links to [install git & create github account](guides/git.md)
 	[install nvm, npm, and bower](guides/devtools.md)
 
